@@ -16,48 +16,49 @@ func TestLogsPathMatcher_InvalidSource1(t *testing.T) {
 	cfgLogsPath := "" // use the default matcher configuration
 	source := "/var/log/messages"
 	expectedResult := ""
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, true, source, expectedResult)
 }
 
 func TestLogsPathMatcher_InvalidSource2(t *testing.T) {
 	cfgLogsPath := "" // use the default matcher configuration
 	source := "/var/lib/docker/containers/01234567/89abcdef-json.log"
 	expectedResult := ""
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, true, source, expectedResult)
 }
 
 func TestLogsPathMatcher_InvalidSource3(t *testing.T) {
 	cfgLogsPath := "/var/log/containers/"
 	source := "/var/log/containers/pod_ns_container_01234567.log"
 	expectedResult := ""
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, false, source, expectedResult)
 }
 
 func TestLogsPathMatcher_VarLibDockerContainers(t *testing.T) {
 	cfgLogsPath := "" // use the default matcher configuration
 	source := fmt.Sprintf("/var/lib/docker/containers/%s/%s-json.log", cid, cid)
 	expectedResult := cid
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, true, source, expectedResult)
 }
 
 func TestLogsPathMatcher_VarLogContainers(t *testing.T) {
 	cfgLogsPath := "/var/log/containers/"
 	source := fmt.Sprintf("/var/log/containers/kube-proxy-4d7nt_kube-system_kube-proxy-%s.log", cid)
 	expectedResult := cid
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, false, source, expectedResult)
 }
 
 func TestLogsPathMatcher_AnotherLogDir(t *testing.T) {
 	cfgLogsPath := "/var/log/other/"
 	source := fmt.Sprintf("/var/log/other/%s.log", cid)
 	expectedResult := cid
-	executeTest(t, cfgLogsPath, source, expectedResult)
+	executeTest(t, cfgLogsPath, true, source, expectedResult)
 }
 
-func executeTest(t *testing.T, cfgLogsPath string, source string, expectedResult string) {
+func executeTest(t *testing.T, cfgLogsPath string, useDocker bool, source string, expectedResult string) {
 	var testConfig = common.NewConfig()
 	if cfgLogsPath != "" {
 		testConfig.SetString("logs_path", -1, cfgLogsPath)
+		testConfig.SetBool("use_docker_path", -1, useDocker)
 	}
 
 	logMatcher, err := newLogsPathMatcher(*testConfig)
